--- a/contact.html
+++ b/contact.html
@@ -32,11 +32,11 @@
                 <p>当店の商品について質問やご意見については
                     下記フォームよりお問い合わせください。<br>
                     また、任意ですがアンケート内容にも協力お願い致します。</p>
-                <form name="form1" method="get" action="">
+                <form name="form1"  action="https://api.staticforms.xyz/submit" method="post">
                     <table>
                         <tr>
                             <th>氏名（必須）</th>
-                            <td><input type="text" name="name" size="30"></td>
+                            <input type="hidden" name="accessKey" value="2ff78b17-f2ff-4b77-80be-81e973332e57">
                         </tr>
                         <tr>
                             <th>Eメール（必須）</th>
